Se agrega todo lo del app
